config is relatively ok

--- a/.vpip/config.cfg
+++ b/.vpip/config.cfg
@@ -2,32 +2,32 @@
 pensize = 1.0
 machinewidth = 1168
 machineheight = 1117
-mmperrev = 136.3
+mmperrev = 132.4
 stepsperrev = 200
 stepmultiplier = 16
-serialport = /dev/ttyACM2
-timesliceus = 30.0
+serialport = /dev/ttyACM7
+timesliceus = 300
 baud = 57600
-motoraccel = 2000
-motormaxspeed = 150
+motoraccel = 0.5
+motormaxspeed = 100
 penup = 0
 pendown = 0
-homex = 0
-homey = 0
+homex = 534
+homey = 432
 polardraw = True
 
 [Paper]
 size = custom
-width = 114
-height = 152
-posx = 30
-posy = 30
+width = 584
+height = 432
+posx = 228
+posy = 191
 margin = 0
 pixels = 10
 rotate = False
 
 [Screen]
-screenx = 1
-showimage = True
+screenx = 1920
+showimage = False
 saveimage = True
 
